======================================
Changes for Crate Data Admin Interface
======================================

Unreleased
==========

 - display crate version of each node and show warning if cluster contains multiple versions

 - display heap size instead of system memory in node detail view

2014/04/29 0.6.3
================

 - fix: make sure twitter import stops when user navigates away from tutorial view

 - fix: allow horizontal scrolling in console result table

2014/04/28 0.6.2
================

 - fixed broken redirect after twitter authentication in 'get started' section

2014/04/16 0.6.1
================

 - force vertical scrollbar to prevent content column from flickering

2014/04/16 0.6.0
================

 - support for partitioned tables

 - make node list sortable by health and name

 - display number of nodes in status bar

 - show node version number

 - added history support in admin console

2014/04/14 0.5.2
================

 - fix: scrolling issues with node list/table list

 - fix: immediately show node list on browser refresh

2014/04/08 0.5.1
================

 - fix: sorting of cluster list

2014/04/08 0.5.0
================

 - display blob tables

 - fix: prevent logo from overlapping sidebar navigation

2014/04/08 0.4.4
================

 - fix: removed horizontal scrollbar in sidebar

2014/04/07 0.4.3
================

 - fix: UI glitch: load was off site

2014/04/07 0.4.2
================

 - fix: display values at overview if no table exists

 - fix: default base_uri is current location

2014/04/07 0.4.1
================

 - fixed Angular version

2014/04/07 0.4.0
================

 - ported from Backbone to Angular

2014/03/21 0.3.1
================

 - show correct cluster status immediately after starting the admin

 - compute correct numbers of missing primary shards and unassigned shards

2014/03/17 0.3.0
================

 - use sql to query clustername and nodes load

2014/03/13 0.2.9
================
