@@ -1,7 +1,7 @@
 'use strict';
 
 angular.module('console', ['sql'])
-  .controller('ConsoleController', function ($scope, $http, $location, SQLQuery, $log, $timeout, $window) {
+  .controller('ConsoleController', function ($scope, $http, $location, SQLQuery, $log, $timeout) {
 
     $scope.statement = "";
     $scope.typedStatement = "";
@@ -9,8 +9,14 @@ angular.module('console', ['sql'])
 
     $scope.resultHeaders = [];
     $scope.renderTable = false;
-    $scope.error = {};
-    $scope.error.hide = true;
+    $scope.error = {
+      hide: true,
+      message: ''
+    };
+    $scope.info = {
+      hide: true,
+      message: ''
+    };
 
     var loadingIndicator = Ladda.create(document.querySelector('button[type=submit]'));
 
@@ -19,8 +25,8 @@ angular.module('console', ['sql'])
     };
 
     var getRecentQueriesFromLocalStorage = function() {
-      var v = localStorage.getItem("crate.console.query_list");
-      $scope.recentQueries = v ? JSON.parse(v) : [];
+      var queryList = localStorage.getItem("crate.console.query_list");
+      $scope.recentQueries = queryList ? JSON.parse(queryList) : [];
     };
 
     var updateRecentQueries = function(stmt) {
@@ -37,8 +43,15 @@ angular.module('console', ['sql'])
       $scope.recentCursor = -1;
     };
 
+    $scope.hide = function hide(item){
+      item.hide = true;
+      item.message = '';
+    };
+
     $scope.toggleOptions = function toggleOptions(){
       $('#console-options').slideToggle();
+      $scope.info.hide = true;
+      $scope.info.message = '';
     };
 
     $scope.clearLocalStorage = function() {
@@ -48,11 +61,12 @@ angular.module('console', ['sql'])
       $scope.recentQueries = [];
       var msg = history.length == 1 ? "1 entry in console history has been cleared." :
             history.length + " entries in console history have been cleared.";
-      $window.alert(msg);
+      $scope.info.message = msg;
+      $scope.info.hide = false;
     };
 
-    var v = localStorage.getItem("crate.console.store_queries") || '1';
-    $scope.useLocalStorage = !!parseInt(v);
+    var doStoreQueries = localStorage.getItem("crate.console.store_queries") || '1';
+    $scope.useLocalStorage = !!parseInt(doStoreQueries);
     $scope.recentCursor = 0;
     getRecentQueriesFromLocalStorage();
 
@@ -118,6 +132,9 @@ angular.module('console', ['sql'])
         success(function(sqlQuery) {
           loadingIndicator.stop();
           $scope.error.hide = true;
+          $scope.error.message = '';
+          $scope.info.hide = true;
+          $scope.info.message = '';
           $scope.renderTable = true;
 
           $scope.resultHeaders = [];
