@@ -22,7 +22,7 @@
 @brand-success:           #00c561;
 @brand-warning:           #ffc600;
 @brand-danger:            #ff5151;
-//@brand-info:            #5bc0de;
+@brand-info:              #5bc0de;
 
 // Scaffolding
 // -------------------------
